Fixes to tabs container for cutoff

--- a/css/browser_window_navagation.css
+++ b/css/browser_window_navagation.css
@@ -88,7 +88,7 @@
   position: absolute;
   z-index: 97000;
   float: left;
-  margin-top: 22px;
+  margin-top: 21px;
   left: 0px;
   display: none;
   margin-right: 5px;
