--- a/css/browser_window_tabs.css
+++ b/css/browser_window_tabs.css
@@ -1,9 +1,9 @@
 #browser_tabs_container{
   display:inline-block;
   width: 100%;
-  width: calc(100% - 8px);
-  padding-left: 4px;
-  padding-right: 4px;
+  width: calc(100% - 12px);
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 #browser_tabs_container .tab_container{
